ajout de mon site avec javascrit

--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
              <hr>
         <h2>Epilogue</h2>
         <p>Inspired by the geniuses behind <a href="http//motherfuckingwebsite.com">motherfuckingwebsite.com</a> and <a href="http://txti.es/">txti</a>.<br><br>This page—that isn't a total fucking eyesore—was created by <a href="https://twitter.com/drew_mc" target="_blank">me</a> with help from <a href="https://twitter.com/gabehammersmith" target="_blank">him.</a> </p>
+        <script src="scripts/main.js"></script>
     </body>
 </html>
