--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="Style.css"/>
        </head>
     <body>
-            <script language="javascript" src="./scripts/main.js"></script>
+            <script language="javascript" src="./scripts/main2.js"></script>
         <h1 class="psy">This is <em>still</em> a motherfucking website.</h1>
         <p>And it's more fucking perfect than the last guy's.</p>
         <h2 class="psy">Seriously, it takes minimal fucking effort to improve this shit.</h2>
